# PyDarkDiv

./: LICENCE  README.md  example_usage.py  pyproject.toml  r_comparison.ipynb  usage_examples.py
R/: DarkDiv.Rd
pydarkdiv/: __init__.py  darkdiv.py  utility_functions.py
tests/: indication.csv  pool.csv  test_comprehensive.py
