[project]
name = "pydarkdiv"
version = "0.1.0"
description = "Python implementation of the DarkDiv R package for calculating dark diversity from co-occurrence data"
authors = [
    {name = "davidyshen", email = "contact@davidyshen.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2,<3.0.0",
    "pandas>=2.3.1,<3.0.0",
    "scipy>=1.16.1,<2.0.0"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "pydarkdiv"}]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"